--- a/styles/components/main.css
+++ b/styles/components/main.css
@@ -1,3 +1,10 @@
+.sec {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
 .illustration-intro {
     width: 100vw;
 }
@@ -7,14 +14,14 @@
     font-weight: 700;
     color: var(--neutra);
     font-size: 2rem;
-    text-align: center;
+    
 }
 
 p {
     font-family: var(--fonte-primaria);
     font-weight: 400;
     color: var(--neutra);
-    text-align: center;
+   
     font-size: 1rem;
     margin-top: 1rem;
 }
@@ -24,7 +31,10 @@ p {
     color: var(--neutra);
     width: 200px; 
     height: 60px;
-    background: radial-gradient(circle, hsl(176, 68%, 64%) 0%, hsl(198, 60%, 50%) 35%);
+    background-image: linear-gradient(90deg, #65e2d9 2%, #339ecc 100%);    
+    font-family: var(--fonte-primaria);
+    font-size: 14px;
+    margin-top: 1rem;
     
     
     
