--- a/styles/components/main.css
+++ b/styles/components/main.css
@@ -1,4 +1,4 @@
-.sec {
+.containner {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -14,13 +14,16 @@
     font-weight: 700;
     color: var(--neutra);
     font-size: 2rem;
+    line-height: normal;
     
 }
 
-p {
+.p {
     font-family: var(--fonte-primaria);
     font-weight: 400;
     color: var(--neutra);
+    line-height: 1rem;
+    line-height: normal;
    
     font-size: 1rem;
     margin-top: 1rem;
@@ -34,8 +37,37 @@ p {
     background-image: linear-gradient(90deg, #65e2d9 2%, #339ecc 100%);    
     font-family: var(--fonte-primaria);
     font-size: 14px;
-    margin-top: 1rem;
+    margin-top: 1rem;   
     
     
     
 }
+
+.containner-2 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 8rem;
+}
+
+.list-2 {
+    color: var(--neutra);
+    font-weight: 400;
+    margin: 1rem;
+    gap: 1rem;    
+    
+}
+
+.h3 {
+    font-family: var(--fonte-secundaria);
+    font-weight: 400 bolder;
+    color: var(--neutra);
+    font-size: 1rem;
+    line-height: normal;
+    margin-top: 1rem;
+}
+
+.li {
+    margin: 1.5rem;
+}
+
