--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
  @import '/styles/components/header.css';
  @import'/styles/components/main.css';
+ @import '/styles/components/extra.css';
  
  body {
     background-color: var(--dark);
