--- a/styles/components/extra.css
+++ b/styles/components/extra.css
@@ -15,11 +15,16 @@
 
 }
 
+.div-sub {
+    margin: 1rem;
+}
+
 .sub {
     font-family: var(--fonte-primaria);
     color: var(--blue-1);
-    text-decoration: var(--blue-1) dashed;
+    font-weight: 400;   
     justify-content: flex-start;
+    margin-top: 2rem;
    
 }
 
@@ -39,7 +44,7 @@
 .type {
     border-radius: 1rem ;
     color: var(--dark-main);
-    width: 200px; 
+    width: 250px; 
     height: 60px;     
     font-family: var(--fonte-primaria);
     font-size: 14px;
@@ -52,12 +57,13 @@
 .button-2 {
     border-radius: 1rem ;
     color: var(--neutra);
-    width: 200px; 
+    width: 250px; 
     height: 60px;
     background-image: linear-gradient(90deg, #65e2d9 2%, #339ecc 100%);    
     font-family: var(--fonte-primaria);
     font-size: 14px;
     margin-top: 2rem;
+   
     
     
     
