--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -13,11 +13,6 @@
     height: 100%;
 }
 
-
-
-
-
-
 .icons {
     color: var(--neutra);
     font-family: var(--fonte-primaria);
@@ -35,3 +30,22 @@
 .sub-block {
     font-size: large;
 }
+
+.social {
+    display: flex;
+   justify-content: center;
+   margin-bottom: 2rem;
+   
+}
+
+@media screen and (min-width: 1024px) {
+    .containner-5 {
+      display: flex;
+      
+    }
+        
+ 
+      
+}
+
+
