--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -23,3 +23,15 @@
 
 }
 
+@media screen and (min-width: 1024px) {
+    .logo {
+      display: flex; 
+      
+    }
+
+    .logo {
+        
+    }
+    
+}
+
