--- a/styles/components/main.css
+++ b/styles/components/main.css
@@ -78,13 +78,14 @@
         width: 40vw;
     }
 
-    .containner-2 {
-        display: grid;        
-        grid-column-gap: 10px;
-        grid-row-gap: 1em;
+    .list-2 {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
         
-        
+          
     }
+    
 
 }
     
