--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -8,6 +8,8 @@
 
 .logo {
     margin: 1rem;
+    width: 40%;
+    height: 40%;
     
 }
 
@@ -18,7 +20,7 @@
     color: var(--neutra);
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    margin: 2rem;
+    margin: 1.2rem;
     gap: 1rem;
 
 }
