--- a/styles/components/extra.css
+++ b/styles/components/extra.css
@@ -89,8 +89,10 @@
         margin-left: 5rem;
     }
 
-    .containner-4 {       
+    .containner-4 {
+      margin-left: 30rem;      
        width: 40%;
+       
        
     }
 
