--- a/styles/components/main.css
+++ b/styles/components/main.css
@@ -77,7 +77,15 @@
     .illustration-intro {
         width: 40vw;
     }
+   
 
+    .list-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    justify-items: center;
+    align-items: center;
+    }
     
           
     
