--- a/styles/components/main.css
+++ b/styles/components/main.css
@@ -1,27 +1,23 @@
-.containner {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
+@import '/styles/style.css';
+
+.container {
+  text-align: center;  
 }
 
-.illustration-intro {
-    width: 90vw;
+.main_container-img {
+    width: 100%;
 }
 
-.h1 {
-    font-family: var(--fonte-secundaria);
-    font-weight: 700;
-    color: var(--neutra);
-    font-size: 2rem;
+.main_container-text {
+    font-family: var(--font-primaria);
+    font-weight: 700 bolder;  
+    font-size: 1.6rem;
     line-height: normal;
-    
 }
 
-.p {
-    font-family: var(--fonte-primaria);
-    font-weight: 400;
-    color: var(--neutra);
+.main_container-paragrafo {
+    font-family: var(--fonte-secundaria);
+    font-weight: 400 bolder;
     line-height: 1rem;
     line-height: normal;
    
@@ -29,67 +25,10 @@
     margin-top: 1rem;
 }
 
-.button {
-    border-radius: 1rem ;
-    color: var(--neutra);
-    width: 250px; 
-    height: 60px;
-    background-image: linear-gradient(90deg, #65e2d9 2%, #339ecc 100%);    
-    font-family: var(--fonte-primaria);
-    font-size: 14px;
-    margin-top: 2rem; 
-    
-    
-    
-}
+.container-button {
+ background-color: var(--blue-2);
+ color: var(--neutra);
+ padding: 1rem 3rem;
 
-.containner-2 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 8rem;
-}
-
-.list-2 {
-    color: var(--neutra);
-    font-weight: 400;
-    margin: 1rem;
-    gap: 1rem;    
-    
-}
-
-.h3 {
-    font-family: var(--fonte-secundaria);
-    font-weight: 700 bolder;
-    color: var(--neutra);
-    font-size: 1.5rem;
-    line-height: normal;
-    margin-top: 1rem;
-}
-
-.li {
-    margin: 1.5rem;
-}
-
-
-
-@media screen and (min-width: 1024px) {
-    .illustration-intro {
-        width: 40vw;
-    }
-   
-
-    .list-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    justify-items: center;
-    align-items: center;
-    }
-    
-          
-    
-    
 
 }
-    
