--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
  @import '/styles/components/footer.css';
  
  body {
-    background-color: var(--dark-main);
+    background-color: var(--neutra);
     font-size: 14px;
  }
 
@@ -23,6 +23,22 @@
 
 
 --neutra:hsl(0, 0%, 100%);
+
+
+/*Light mode*/
+
+/* Primary*/
+
+--Dark-Blue-link: hsl(217, 28%, 15%);
+--Dark-Blue-main: hsl(218, 28%, 13%);
+--Dark-Blue-footer: hsl(216, 53%, 9%);
+--Dark-Blue-bg: hsl(219, 30%, 18%);
+
+/* Accent */
+
+--Cyan-gradient: hsl(176, 68%, 64%);
+--Blue-gradient: hsl(198, 60%, 50%);
+--Light-Red: hsl(0, 100%, 63%);
 
 }
 
