--- a/styles/components/servicos.css
+++ b/styles/components/servicos.css
@@ -12,7 +12,7 @@
 }
 
 .servicos_main-div-text {
-  font-family: var(--fonte-secundaria);
+  font-family: var(--fonte-primaria);
   font-weight: 400 bolder;
   line-height: 1rem;
   line-height: normal;
@@ -20,10 +20,42 @@
   font-size: 1rem;
   margin-top: 1rem;
 }
+.servicos_main-div-paragrafo {
+  font-family: var(--fonte-primaria);
+  font-weight: 400;
+  line-height: 1rem;
+  line-height: normal;
+ 
+  font-size: .8rem;
+  margin-top: 1rem
+
+}
 
 .servicos_main-div-img {
    margin-top: 3rem;
    margin-bottom: 1rem;
 }
 
+@media (min-width: 1440px) {
+  .servicos_main-div {
+   display: grid;
+   justify-content: center;
+   grid-template-columns: repeat(2, 1fr);
+   grid-gap: 5rem;  
+   margin: 1rem auto;
+   width: 62.5rem
+  }
+
+
+  servicos_main-div-text {
+    font-family: var(--fonte-secundaria);
+    font-weight: 700 bolder;
+    line-height: 1.5rem;
+    line-height: normal;
+   
+    font-size: 1.2rem;
+    margin-top: 1rem;
+  }
+
+}
 
