--- a/styles/components/acesso.css
+++ b/styles/components/acesso.css
@@ -26,10 +26,15 @@
   margin-bottom: 1rem;
 
 }
+
+.acesso_antecipado-div-imput {
+  padding: 2rem 0rem; 
+}
   .acesso_antecipado-input {
     padding: 1rem 2rem;
     outline: none;
-    border-radius: 2rem ;
+    border-radius: 2rem;
+     
   }
 
 
@@ -44,4 +49,10 @@
         font-weight: 400 bolder;
         margin-top: 1rem;      
     
+}
+@media (min-width: 1440px) {
+
+  
+
+
 }
