--- a/styles/components/acesso.css
+++ b/styles/components/acesso.css
@@ -51,8 +51,30 @@
     
 }
 @media (min-width: 1440px) {
+ 
+  .acesso_antecipado-main-div {
+    display: flex;
+    justify-content: space-between;
+    gap: 10rem;
+    align-items: center;
 
+  }
+
+  .acesso_antecipado-text {
+    text-align: start;
+    font-family: var(--fonte-primaria);
+    font-weight: 700 bolder;
+    font-size: 2rem;
+    
+  }
+
+  .acesso_antecipado-paragrafo {
+    font-family: var(--fonte-secundaria);
+    font-weight: 400;
+    font-size: 1rem;
+    margin-bottom: 1rem;
   
+  }
 
 
 }
